# fbg-6.0

./: .gitignore  LICENSE  README.md
footbored/: Cargo.toml
footbored/src/: client.rs  game.rs  game_server.rs  lobby.rs  main.rs  websocket.rs
