[package]
name = "footbored"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.10"
actix-web = "3.3"
actix-rt = "2.5"
actix-web-actors = "3"
serde = { version = "1.0", features = ["derive"] }
openssl = "0.10.35"
actix-service = "1.0"
actix-tls = "2.2"
actix-utils = "1.0"
native-tls = "0.2.7"
rustls = "0.20"