[package]
name = "footbored"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = "0.8"
serde = { version = "1", features = ["derive"] }
tokio-tungstenite = "0.15"
futures-util = "0.3"
futures = "0.3"
serde_json = "1.0"