[package]
name = "footbored"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
tokio = { version = "1.9.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3.17"
tokio-tungstenite = "0.15.0"